# tosteaasa-kalkulaator

./: README.md  pyproject.toml  streamlit_app.py
lifting_loops/: __init__.py  admissible_weight.py  cli.py  input_schema.py  loads.py  loop_catalog.py  loop_types.py  materials.py  models.py  plotting.py  report.py  resistance.py  rotation.py  selection.py  utilization.py
tests/: test_input_schema.py  test_loads.py  test_plotting.py  test_resistance.py  test_rotation.py  test_selection.py  test_utilization.py
