[project]
name = "lifting-loops"
version = "0.1.0"
description = "Design calculations for bent lifting loops in precast concrete elements."
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.24",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.35",
]

[project.scripts]
lifting-loops = "lifting_loops.cli:main"
